--- a/content/course_weeks/week_03/week_3.qmd
+++ b/content/course_weeks/week_03/week_3.qmd
@@ -499,10 +499,7 @@ Consider the following scenario: you are a data scientist at a music streaming c
 
     4.  What is the intercept and what does it describe?
 
-```{=html}
-<!-- -->
-```
-3.  Calculate 90%, 95% and 99% confidence intervals for the treatment effect and compare them. Which intervals are larger? And what question do they answer?
+4.  Calculate 90%, 95% and 99% confidence intervals for the treatment effect and compare them. Which intervals are larger? And what question do they answer?
 
 After one month, you are asked to take a different outcome into focus - the rate of subscription cancellations. For each user you find the information whether he/she cancelled his/her subscription in the column `cancel`: 1 if cancelled, and 0 if not. Because other than `minutes`, `cancel` is a binary variable (it can only be 0 or 1), you need to apply a different form of regression: the logistic regression. There is lot of theory behind it, which we will not cover now. But feel free to read [here](https://christophm.github.io/interpretable-ml-book/logistic.html) about it.
 
@@ -516,7 +513,7 @@ $$
 
 which is different from the linear regression. We know relate a one-unit increase in $D$ (treated or not-treated) with an increase in $logit(p)$. Therefore, you can read the coefficient as follows:
 
-**Increasing** $D$ **by 1 will result in a** $\beta_1$ **increase in** $logit(p)$**, which is approximately an** $exp(\beta_1)-1$ **increase in the odds of** $Y = 1$**.**
+**Increasing** $D$ **by 1 will result in a** $\beta_1$ **increase in** $logit(p)$**, which is approximately an** $(exp(\beta_1)-1)$ % **increase in the odds** $\frac{p}{1-p}$**.**
 
 Instead of `lm()` use the following command: `glm(formula, family=binomial(link='logit'), data)`, where you replace formula with the known syntax.
 
@@ -524,12 +521,18 @@ Instead of `lm()` use the following command: `glm(formula, family=binomial(link=
 
 2.  Interpret the coefficients.
 
+Find here the [solutions](../../../content/course_weeks/week_03/solution.R).
+
 ## Assignment
 
-Accept the **Week 3 - Assignment** and follow the same steps as last week and as described in the organization chapter.
-
-*Will be published 30 April 2024 20:00.*
-
 ::: assignment
-...
+Accept the [**Week 3 - Assignment**](https://classroom.github.com/a/Fnvwjrn_) and follow the same steps as last week and as described in the organization chapter.
+
+1.  Imagine that there are cost associated with providing each user with this new algorithm. Your business colleague tells you, that from a business perspective, the introduction is only beneficial if users listen at least 5% more than before. Develop a hypothesis based on this information and test it.
+
+2.  One advantage of A/B testing in software companies is the ability to monitor the experiment simultaneously. For the first three days after having started the experiment you check the numbers and compute the ATE. Simulate this by subsetting the data to include observations available after the first day, after the second day and after the third day. Do you notice any differences? If yes, what could be a possible explanation? Run the analysis for both outcomes, `minutes` and `cancel`. (Hint: you need to use the variable `log_in_day` which tells you at what day the users first logged in after the start of the experiment. Before that, we could not observe their behavior.) 
+
+3.  Compute conditional ATEs based on the day the users first logged into the application. (Please note, this is different to 2.) There are two different ways to compute the CATEs: you could subset the data and run the analysis for each condition or you could add a so-called interaction effect to your regression syntax by `y ~ x + x:interaction`, where interaction is the variable you to affect the treatment effect. Run the analysis for both outcomes, `minutes` and `cancel`.
+
+4.  Your colleagues responsible for the development of the recommendation algorithm tell you that they ran an experiment prior to your experiment with a small number of Beta users. These users signed up to test a Beta version of your app where new features are tested before being released. Because your colleague received different results than you, he prefers to stick to his/her own estimates. Convince your colleague that your experiment returns more valid estimates. Use a DAG to do so.
 :::
