--- a/content/course_weeks/overview.qmd
+++ b/content/course_weeks/overview.qmd
@@ -14,35 +14,36 @@ editor:
   markdown: 
     wrap: 72
 ---
-### Schedule
 
 ::: {.grid}
 
-::: {.g-col-2}
+::: {.g-col-1}
 :::
 
 
 ::: {.g-col-8}
 
-| Session | Date | Topic |
-| --- | --- | --- |
-| 1 | April 15 & 16 | Introduction to Causal Inference |
-| 2 | April 22 & 21 | Graphical Causal Models |
-| 3 | April 29 & 30 | Randomized Experiments & Linear Regression |
-| 4 | May 6 & 7 | Matching |
-| 5 | May 13 & 14 | Double Machine Learning | 
-| - | May 20 & 21 | Holiday |
-| 6 | May 27 & 28 | Effect Heterogeneity |
-| 7 | June 3 & 4 | Unobserved Confounding & Instrumental Variables |
-| 8 | June 10 & 11 | Difference-in-Difference |
-| 9 | June 17 & 18 | Synthetic Control |
-| 10 | June 24 & 25 | Regression Discontinuity |
-| 11 | July 1 & 2 | Causal Mediation  |
-| 12 | July 8 & 9 | Further Topics in Causal Machine Learning |
+### Schedule
+
+| Session | Date | Topic | Slides | Tutorial | Assignment
+| --- | --- | --- | --- | --- | --- |
+| 1 | April 15 & 16 | Introduction to Causal Inference | [{{< fa book-open >}}](https://jschwarz.me/presentations/slides/01_intro.html) | [{{< fa laptop >}}](week_01/week_1.html) | [{{< fa brands github >}}](https://classroom.github.com/a/qKNVakO4) |
+| 2 | April 22 & 21 | Graphical Causal Models | [{{< fa book-open >}}](https://jschwarz.me/presentations/slides/02_graphs.html) | [{{< fa laptop >}}](week_02/week_2.html) | [{{< fa brands github >}}](https://classroom.github.com/a/eNvelq2Z) |
+| 3 | April 29 & 30 | Randomized Experiments & Linear Regression | [{{< fa book-open >}}](https://jschwarz.me/presentations/slides/03_exper.html) | [{{< fa laptop >}}](week_03/week_3.html) | [{{< fa brands github >}}](https://classroom.github.com/a/Fnvwjrn_) |
+| 4 | May 6 & 7 | Matching | [{{< fa book-open >}}](https://jschwarz.me/presentations/slides/04_ob_conf.html) | [{{< fa laptop >}}](week_04/week_4.html) | [{{< fa brands github >}}](https://classroom.github.com/a/ZY_8r4KL) |
+| 5 | May 13 & 14 | Double Machine Learning | [{{< fa book-open >}}](https://jschwarz.me/presentations/slides/05_dml.html) | [{{< fa laptop >}}](week_05/week_5.html) | [{{< fa brands github >}}](https://classroom.github.com/a/m7oLFvnr) | 
+| - | May 20 & 21 | Holiday | - | - | - |
+| 6 | May 27 & 28 | Effect Heterogeneity | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
+| 7 | June 3 & 4 | Unobserved Confounding & Instrumental Variables | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
+| 8 | June 10 & 11 | Difference-in-Difference | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
+| 9 | June 17 & 18 | Synthetic Control | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
+| 10 | June 24 & 25 | Regression Discontinuity | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
+| 11 | July 1 & 2 | Causal Mediation  | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
+| 12 | July 8 & 9 | Further Topics in Causal Machine Learning | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
 
 :::
 
-::: {.g-col-2}
+::: {.g-col-1}
 :::
 
 :::
