--- a/content/course_weeks/week_04/week_4.qmd
+++ b/content/course_weeks/week_04/week_4.qmd
@@ -44,7 +44,7 @@ source(paste0(here::here(), "/code/dag_theme.R"))
 
 ## Slides & Recap
 
-[**Slides - Week 4**](../../../lecture/04.pdf)
+<iframe style="width: 100%; height: 45vw; max-height: 50vh;" frameborder="0" allowfullscreen src="https://jschwarz.me/presentations/slides/04_ob_conf.html"></iframe>
 
 Last week, we discussed the significant advantage of employing a randomized treatment assignment: it allowed straightforward comparisons of group averages or the application of univariate linear regressions (i.e., with only one variable on the right-hand side), thereby easing statistical inference.
 
